--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ keep_files:
 title: Airspace
 subtitle: "A free HTML5 agency template"
 url: "https://sabrina-budde.github.io" # the base hostname & protocol for your site
-# baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
+baseurl: "" #/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
 baseurl: "/airspace-jekyll"
 cover: "/assets/cover.png"
 logo: "/assets/logo.png"
